--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -244,6 +244,8 @@ shell:
     # - -c
     # - 'tmux attach || tmux new -s main'
 
+alt_send_esc: true
+
 working_directory: None
 
 debug:
@@ -528,90 +530,91 @@ key_bindings:
   - { key: Back,     mods: Alt,     chars: "\x1bD"                           }
   - { key: Delete,   mods: Alt,     chars: "\x1bd"                           }
   - { key: X,        mods: Command, chars: "\x1bx"                           }
-  - { key: LBracket, mods: Command|Shift, chars: "\x1b{"                     }
-  - { key: RBracket, mods: Command|Shift, chars: "\x1b}"                     }
-  - { key: Slash,     mods: Command,       chars: "\x1b/"                     }
-  - { key: A,         mods: Command,       chars: "\x1ba"                        }
-  - { key: B,         mods: Command,       chars: "\x1bb"                        }
-  - { key: C,         mods: Command,       chars: "\x1bc"                        }
-  - { key: D,         mods: Command,       chars: "\x1bd"                        }
-  - { key: E,         mods: Command,       chars: "\x1be"                        }
-  - { key: F,         mods: Command,       chars: "\x1bf"                        }
-  - { key: G,         mods: Command,       chars: "\x1bg"                        }
-  - { key: H,         mods: Command,       chars: "\x1bh"                        }
-  - { key: I,         mods: Command,       chars: "\x1bi"                        }
-  - { key: J,         mods: Command,       chars: "\x1bj"                        }
-  - { key: K,         mods: Command,       chars: "\x1bk"                        }
-  - { key: L,         mods: Command,       chars: "\x1bl"                        }
-  - { key: M,         mods: Command,       chars: "\x1bm"                        }
-  - { key: N,         mods: Command,       chars: "\x1bn"                        }
-  - { key: O,         mods: Command,       chars: "\x1bo"                        }
-  - { key: P,         mods: Command,       chars: "\x1bp"                        }
-  - { key: Q,         mods: Command,       chars: "\x1bq"                        }
-  - { key: R,         mods: Command,       chars: "\x1br"                        }
-  - { key: S,         mods: Command,       chars: "\x1bs"                        }
-  - { key: T,         mods: Command,       chars: "\x1bt"                        }
-  - { key: U,         mods: Command,       chars: "\x1bu"                        }
-  - { key: V,         mods: Command,       chars: "\x1bv"                        }
-  - { key: W,         mods: Command,       chars: "\x1bw"                        }
-  - { key: X,         mods: Command,       chars: "\x1bx"                        }
-  - { key: Y,         mods: Command,       chars: "\x1by"                        }
-  - { key: Z,         mods: Command,       chars: "\x1bz"                        }
-  - { key: A,         mods: Command|Shift, chars: "\x1bA"                        }
-  - { key: B,         mods: Command|Shift, chars: "\x1bB"                        }
-  - { key: C,         mods: Command|Shift, chars: "\x1bC"                        }
-  - { key: D,         mods: Command|Shift, chars: "\x1bD"                        }
-  - { key: E,         mods: Command|Shift, chars: "\x1bE"                        }
-  - { key: F,         mods: Command|Shift, chars: "\x1bF"                        }
-  - { key: G,         mods: Command|Shift, chars: "\x1bG"                        }
-  - { key: H,         mods: Command|Shift, chars: "\x1bH"                        }
-  - { key: I,         mods: Command|Shift, chars: "\x1bI"                        }
-  - { key: J,         mods: Command|Shift, chars: "\x1bJ"                        }
-  - { key: K,         mods: Command|Shift, chars: "\x1bK"                        }
-  - { key: L,         mods: Command|Shift, chars: "\x1bL"                        }
-  - { key: M,         mods: Command|Shift, chars: "\x1bM"                        }
-  - { key: N,         mods: Command|Shift, chars: "\x1bN"                        }
-  - { key: O,         mods: Command|Shift, chars: "\x1bO"                        }
-  - { key: P,         mods: Command|Shift, chars: "\x1bP"                        }
-  - { key: Q,         mods: Command|Shift, chars: "\x1bQ"                        }
-  - { key: R,         mods: Command|Shift, chars: "\x1bR"                        }
-  - { key: S,         mods: Command|Shift, chars: "\x1bS"                        }
-  - { key: T,         mods: Command|Shift, chars: "\x1bT"                        }
-  - { key: U,         mods: Command|Shift, chars: "\x1bU"                        }
-  - { key: V,         mods: Command|Shift, chars: "\x1bV"                        }
-  - { key: W,         mods: Command|Shift, chars: "\x1bW"                        }
-  - { key: X,         mods: Command|Shift, chars: "\x1bX"                        }
-  - { key: Y,         mods: Command|Shift, chars: "\x1bY"                        }
-  - { key: Z,         mods: Command|Shift, chars: "\x1bZ"                        }
-  - { key: Key1,      mods: Alt,           chars: "\x1b1"                        }
-  - { key: Key2,      mods: Alt,           chars: "\x1b2"                        }
-  - { key: Key3,      mods: Alt,           chars: "\x1b3"                        }
-  - { key: Key4,      mods: Alt,           chars: "\x1b4"                        }
-  - { key: Key5,      mods: Alt,           chars: "\x1b5"                        }
-  - { key: Key6,      mods: Alt,           chars: "\x1b6"                        }
-  - { key: Key7,      mods: Alt,           chars: "\x1b7"                        }
-  - { key: Key8,      mods: Alt,           chars: "\x1b8"                        }
-  - { key: Key9,      mods: Alt,           chars: "\x1b9"                        }
-  - { key: Key0,      mods: Alt,           chars: "\x1b0"                        }
-  - { key: Space,     mods: Control,       chars: "\x00"                         } # Ctrl + Space
-  - { key: Grave,     mods: Alt,           chars: "\x1b`"                        } # Alt + `
-  - { key: Grave,     mods: Alt|Shift,     chars: "\x1b~"                        } # Alt + ~
-  - { key: Period,    mods: Alt,           chars: "\x1b."                        } # Alt + .
-  - { key: Key8,      mods: Alt|Shift,     chars: "\x1b*"                        } # Alt + *
-  - { key: Key3,      mods: Alt|Shift,     chars: "\x1b#"                        } # Alt + #
-  - { key: Period,    mods: Alt|Shift,     chars: "\x1b>"                        } # Alt + >
-  - { key: Comma,     mods: Alt|Shift,     chars: "\x1b<"                        } # Alt + <
-  - { key: Minus,     mods: Alt|Shift,     chars: "\x1b_"                        } # Alt + _
-  - { key: Key5,      mods: Alt|Shift,     chars: "\x1b%"                        } # Alt + %
-  - { key: Key6,      mods: Alt|Shift,     chars: "\x1b^"                        } # Alt + ^
-  - { key: Backslash, mods: Alt,           chars: "\x1b\\"                       } # Alt + \
-  - { key: Backslash, mods: Alt|Shift,     chars: "\x1b|"                        } # Alt + |
-  - { key: Up,        mods: Command,       chars: "\x1b[1;5A"                    } # Alt + up
-  - { key: Down,      mods: Command,       chars: "\x1b[1;5B"                    } # Alt + down
-  - { key: Semicolon, mods: Command|Shift, chars: "\x1b:"                        } # Cmd + colon
-  - { key: 36,        mods: Command,       chars: "\x1b\r"                       } # Alt + Enter
-  - { key: Period,    mods: Command,       chars: "\x1b."                        } # Alt + .
-  - { key: Grave,     mods: Control,       chars: "|> "                          } # Ctrl + ` -> pipeline
+  # - { key: LBracket, mods: Command|Shift, chars: "\x1b{"                     }
+  # - { key: RBracket, mods: Command|Shift, chars: "\x1b}"                     }
+  # - { key: Slash,     mods: Command,       chars: "\x1b/"                     }
+  # - { key: A,         mods: Command,       chars: "\x1ba"                        }
+  # - { key: B,         mods: Command,       chars: "\x1bb"                        }
+  # - { key: C,         mods: Command,       chars: "\x1bc"                        }
+  # - { key: D,         mods: Command,       chars: "\x1bd"                        }
+  # - { key: E,         mods: Command,       chars: "\x1be"                        }
+  # - { key: F,         mods: Command,       chars: "\x1bf"                        }
+  # - { key: G,         mods: Command,       chars: "\x1bg"                        }
+  # - { key: H,         mods: Command,       chars: "\x1bh"                        }
+  # - { key: I,         mods: Command,       chars: "\x1bi"                        }
+  # - { key: J,         mods: Command,       chars: "\x1bj"                        }
+  # - { key: K,         mods: Command,       chars: "\x1bk"                        }
+  # - { key: L,         mods: Command,       chars: "\x1bl"                        }
+  # - { key: M,         mods: Command,       chars: "\x1bm"                        }
+  # - { key: N,         mods: Command,       chars: "\x1bn"                        }
+  # - { key: O,         mods: Command,       chars: "\x1bo"                        }
+  # - { key: P,         mods: Command,       chars: "\x1bp"                        }
+  # - { key: Q,         mods: Command,       chars: "\x1bq"                        }
+  # - { key: R,         mods: Command,       chars: "\x1br"                        }
+  # - { key: S,         mods: Command,       chars: "\x1bs"                        }
+  # - { key: T,         mods: Command,       chars: "\x1bt"                        }
+  # - { key: U,         mods: Command,       chars: "\x1bu"                        }
+  # - { key: V,         mods: Command,       chars: "\x1bv"                        }
+  # - { key: W,         mods: Command,       chars: "\x1bw"                        }
+  # - { key: X,         mods: Command,       chars: "\x1bx"                        }
+  # - { key: Y,         mods: Command,       chars: "\x1by"                        }
+  # - { key: Z,         mods: Command,       chars: "\x1bz"                        }
+  # - { key: A,         mods: Command|Shift, chars: "\x1bA"                        }
+  # - { key: B,         mods: Command|Shift, chars: "\x1bB"                        }
+  # - { key: C,         mods: Command|Shift, chars: "\x1bC"                        }
+  # - { key: D,         mods: Command|Shift, chars: "\x1bD"                        }
+  # - { key: E,         mods: Command|Shift, chars: "\x1bE"                        }
+  # - { key: F,         mods: Command|Shift, chars: "\x1bF"                        }
+  # - { key: G,         mods: Command|Shift, chars: "\x1bG"                        }
+  # - { key: H,         mods: Command|Shift, chars: "\x1bH"                        }
+  # - { key: I,         mods: Command|Shift, chars: "\x1bI"                        }
+  # - { key: J,         mods: Command|Shift, chars: "\x1bJ"                        }
+  # - { key: K,         mods: Command|Shift, chars: "\x1bK"                        }
+  # - { key: L,         mods: Command|Shift, chars: "\x1bL"                        }
+  # - { key: M,         mods: Command|Shift, chars: "\x1bM"                        }
+  # - { key: N,         mods: Command|Shift, chars: "\x1bN"                        }
+  # - { key: O,         mods: Command|Shift, chars: "\x1bO"                        }
+  # - { key: P,         mods: Command|Shift, chars: "\x1bP"                        }
+  # - { key: Q,         mods: Command|Shift, chars: "\x1bQ"                        }
+  # - { key: R,         mods: Command|Shift, chars: "\x1bR"                        }
+  # - { key: S,         mods: Command|Shift, chars: "\x1bS"                        }
+  # - { key: T,         mods: Command|Shift, chars: "\x1bT"                        }
+  # - { key: U,         mods: Command|Shift, chars: "\x1bU"                        }
+  # - { key: V,         mods: Command|Shift, chars: "\x1bV"                        }
+  # - { key: W,         mods: Command|Shift, chars: "\x1bW"                        }
+  # - { key: X,         mods: Command|Shift, chars: "\x1bX"                        }
+  # - { key: Y,         mods: Command|Shift, chars: "\x1bY"                        }
+  # - { key: Z,         mods: Command|Shift, chars: "\x1bZ"                        }
+  # - { key: Key1,      mods: Alt,           chars: "\x1b1"                        }
+  # - { key: Key2,      mods: Alt,           chars: "\x1b2"                        }
+  # - { key: Key3,      mods: Alt,           chars: "\x1b3"                        }
+  # - { key: Key4,      mods: Alt,           chars: "\x1b4"                        }
+  # - { key: Key5,      mods: Alt,           chars: "\x1b5"                        }
+  # - { key: Key6,      mods: Alt,           chars: "\x1b6"                        }
+  # - { key: Key7,      mods: Alt,           chars: "\x1b7"                        }
+  # - { key: Key8,      mods: Alt,           chars: "\x1b8"                        }
+  # - { key: Key9,      mods: Alt,           chars: "\x1b9"                        }
+  # - { key: Key0,      mods: Alt,           chars: "\x1b0"                        }
+  # - { key: Space,     mods: Control,       chars: "\x00"                         } # Ctrl + Space
+  # - { key: Grave,     mods: Alt,           chars: "\x1b`"                        } # Alt + `
+  # - { key: Grave,     mods: Alt|Shift,     chars: "\x1b~"                        } # Alt + ~
+  # - { key: Period,    mods: Alt,           chars: "\x1b."                        } # Alt + .
+  # - { key: Key8,      mods: Alt|Shift,     chars: "\x1b*"                        } # Alt + *
+  # - { key: Key3,      mods: Alt|Shift,     chars: "\x1b#"                        } # Alt + #
+  # - { key: Period,    mods: Alt|Shift,     chars: "\x1b>"                        } # Alt + >
+  # - { key: Comma,     mods: Alt|Shift,     chars: "\x1b<"                        } # Alt + <
+  # - { key: Minus,     mods: Alt|Shift,     chars: "\x1b_"                        } # Alt + _
+  # - { key: Key5,      mods: Alt|Shift,     chars: "\x1b%"                        } # Alt + %
+  # - { key: Key6,      mods: Alt|Shift,     chars: "\x1b^"                        } # Alt + ^
+  # - { key: Backslash, mods: Alt,           chars: "\x1b\\"                       } # Alt + \
+  # - { key: Backslash, mods: Alt|Shift,     chars: "\x1b|"                        } # Alt + |
+  # - { key: Up,        mods: Command,       chars: "\x1b[1;5A"                    } # Alt + up
+  # - { key: Down,      mods: Command,       chars: "\x1b[1;5B"                    } # Alt + down
+  # - { key: Semicolon, mods: Command|Shift, chars: "\x1b:"                        } # Cmd + colon
+  # - { key: 36,        mods: Command,       chars: "\x1b\r"                       } # Alt + Enter
+  # - { key: Period,    mods: Command,       chars: "\x1b."                        } # Alt + .
+  # - { key: B,           mods: Alt,           chars: "\x1bb"                        } # Alt + n
+  - { key: Grave,       mods: Control,       chars: "|> "                          } # Ctrl + ` -> pipeline
   - { key: Key1, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "1"] } }
   - { key: Key2, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "2"] } }
   - { key: Key3, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "3"] } }
