--- a/zellij/.config/zellij/config.yaml
+++ b/zellij/.config/zellij/config.yaml
@@ -8,289 +8,23 @@
 keybinds:
     unbind: true
     normal:
-        - action: [SwitchToMode: Locked,]
-          key: [Ctrl: 'g',]
-        - action: [SwitchToMode: Pane,]
-          key: [Ctrl: 'p',]
-        - action: [SwitchToMode: Resize,]
-          key: [Ctrl: 'n',]
-        - action: [SwitchToMode: Tab,]
-          key: [Ctrl: 't',]
-        - action: [SwitchToMode: Scroll,]
-          key: [Ctrl: 's',]
-        # - action: [SwitchToMode: Session,]
-        #   key: [Ctrl: 'o',]
-        - action: [SwitchToMode: Move,]
-          key: [Ctrl: 'h',]
         - action: [SwitchToMode: Tmux,]
           key: [Alt: 't',]
-        # - action: [Quit,]
-        #   key: [Ctrl: 'q',]
-        # - action: [NewPane: ]
-        #   key: [ Alt: 'n',]
-        # - action: [MoveFocusOrTab: Left,]
-        #   key: [ Alt: 'h', Alt: Left]
-        # - action: [MoveFocusOrTab: Right,]
-        #   key: [ Alt: 'l', Alt: Right ]
-        # - action: [MoveFocus: Down,]
-        #   key: [ Alt: 'j', Alt: Down]
-        # - action: [MoveFocus: Up,]
-        #   key: [ Alt: 'k', Alt: Up, ]
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '=']
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '+']
-        # - action: [Resize: Decrease,]
-        #   key: [ Alt: '-']
-        # uncomment this and adjust key if using copy_on_select=false
-        # - action: [Copy: ]
-        #   key: [ Alt: 'c']
-    locked:
-        - action: [SwitchToMode: Normal,]
-          key: [Ctrl: 'g',]
-    resize:
-        # - action: [SwitchToMode: Locked,]
-        #   key: [Ctrl: 'g']
-        # - action: [SwitchToMode: Pane,]
-        #   key: [Ctrl: 'p',]
-        # - action: [SwitchToMode: Tab,]
-        #   key: [Ctrl: 't',]
-        - action: [SwitchToMode: Normal,]
-          key: [Ctrl: 'n', Char: "\n", Char: ' ', Esc]
-        # - action: [SwitchToMode: Scroll,]
-        #   key: [Ctrl: 's']
-        # - action: [SwitchToMode: Session,]
-        #   key: [Ctrl: 'o',]
-        # - action: [SwitchToMode: Move,]
-        #   key: [Ctrl: 'h',]
-        # - action: [SwitchToMode: Tmux,]
-        #   key: [Ctrl: 'b',]
-        # - action: [Quit]
-        #   key: [Ctrl: 'q']
-        - action: [Resize: Left,]
-          key: [Char: 'h', Left,]
-        - action: [Resize: Down,]
-          key: [Char: 'j', Down,]
-        - action: [Resize: Up,]
-          key: [Char: 'k', Up, ]
-        - action: [Resize: Right,]
-          key: [Char: 'l', Right,]
-        - action: [Resize: Increase,]
-          key: [Char: '=']
-        - action: [Resize: Increase,]
-          key: [ Char: '+']
-        - action: [Resize: Decrease,]
-          key: [Char: '-']
-        # - action: [NewPane: ,]
-        #   key: [ Alt: 'n',]
-        - action: [MoveFocusOrTab: Left,]
+        - action: [Quit,]
+          key: [Ctrl: 'q',]
+        - action: [MoveFocus: Left,]
           key: [ Alt: 'h', Alt: Left]
-        - action: [MoveFocusOrTab: Right,]
-          key: [ Alt: 'l', Alt: Right]
+        - action: [MoveFocus: Right,]
+          key: [ Alt: 'l', Alt: Right ]
         - action: [MoveFocus: Down,]
           key: [ Alt: 'j', Alt: Down]
         - action: [MoveFocus: Up,]
-          key: [ Alt: 'k', Alt: Up]
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '=']
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '+']
-        # - action: [Resize: Decrease,]
-        #   key: [ Alt: '-']
-    pane:
-        # - action: [SwitchToMode: Locked,]
-        #   key: [Ctrl: 'g']
-        # - action: [SwitchToMode: Resize,]
-        #   key: [Ctrl: 'n',]
-        # - action: [SwitchToMode: Tab,]
-        #   key: [Ctrl: 't',]
-        - action: [SwitchToMode: Normal,]
-          key: [Ctrl: 'p', Char: "\n", Char: ' ', Esc]
-        # - action: [SwitchToMode: Scroll,]
-        #   key: [Ctrl: 's']
-        # - action: [SwitchToMode: Session,]
-        #   key: [Ctrl: 'o',]
-        # - action: [SwitchToMode: Move,]
-        #   key: [Ctrl: 'h',]
-        # - action: [SwitchToMode: Tmux,]
-        #   key: [Ctrl: 'b',]
-        # - action: [Quit,]
-        #   key: [Ctrl: 'q',]
-        # - action: [MoveFocus: Left,]
-        #   key: [ Char: 'h', Left,]
-        # - action: [MoveFocus: Right,]
-        #   key: [ Char: 'l', Right,]
-        # - action: [MoveFocus: Down,]
-        #   key: [ Char: 'j', Down,]
-        # - action: [MoveFocus: Up,]
-        #   key: [ Char: 'k', Up,]
-        # - action: [SwitchFocus,]
-        #   key: [Char: 'p']
-        # - action: [NewPane: , SwitchToMode: Normal,]
-        #   key: [Char: 'n',]
-        # - action: [NewPane: Down, SwitchToMode: Normal,]
-        #   key: [Char: 'd',]
-        # - action: [NewPane: Right, SwitchToMode: Normal,]
-        #   key: [Char: 'r',]
-        # - action: [CloseFocus, SwitchToMode: Normal,]
-        #   key: [Char: 'x',]
-        # - action: [ToggleFocusFullscreen, SwitchToMode: Normal,]
-        #   key: [Char: 'f',]
-        # - action: [TogglePaneFrames, SwitchToMode: Normal,]
-        #   key: [Char: 'z',]
-        # - action: [ToggleFloatingPanes, SwitchToMode: Normal,]
-        #   key: [Char: 'w']
-        # - action: [TogglePaneEmbedOrFloating, SwitchToMode: Normal,]
-        #   key: [Char: 'e']
-        # - action: [NewPane: ,]
-        #   key: [ Alt: 'n',]
-        - action: [MoveFocusOrTab: Left,]
-          key: [ Alt: 'h', Alt: Left]  # The Alt: Left etc. variants are temporary hacks and will be removed in the future - please do not rely on them!
-        - action: [MoveFocusOrTab: Right,]
-          key: [ Alt: 'l', Alt: Right]
-        - action: [MoveFocus: Down,]
-          key: [ Alt: 'j', Alt: Down]
-        - action: [MoveFocus: Up,]
-          key: [ Alt: 'k', Alt: Up]
-        - action: [Resize: Increase,]
-          key: [ Alt: '=']
-        - action: [Resize: Increase,]
-          key: [ Alt: '+']
-        - action: [Resize: Decrease,]
-          key: [ Alt: '-']
-        - action: [SwitchToMode: RenamePane, PaneNameInput: [0],]
-          key: [Char: 'c']
-    move:
-        # - action: [SwitchToMode: Locked,]
-        #   key: [Ctrl: 'g']
-        # - action: [SwitchToMode: Pane,]
-        #   key: [Ctrl: 'p',]
-        # - action: [SwitchToMode: Tab,]
-        #   key: [Ctrl: 't',]
-        # - action: [SwitchToMode: Resize,]
-        #   key: [Ctrl: 'n',]
-        - action: [SwitchToMode: Normal,]
-          key: [Ctrl: 'h', Char: "\n", Char: ' ', Esc]
-        # - action: [SwitchToMode: Scroll,]
-        #   key: [Ctrl: 's']
-        # - action: [SwitchToMode: Session,]
-        #   key: [Ctrl: 'o',]
-        # - action: [Quit]
-        #   key: [Ctrl: 'q']
-        - action: [MovePane: ,]
-          key: [Char: 'n', Char: "\t",]
-        - action: [MovePane: Left,]
-          key: [Char: 'h', Left,]
-        - action: [MovePane: Down,]
-          key: [Char: 'j', Down,]
-        - action: [MovePane: Up,]
-          key: [Char: 'k', Up, ]
-        - action: [MovePane: Right,]
-          key: [Char: 'l', Right,]
-        - action: [NewPane: ,]
-          key: [ Alt: 'n',]
-        - action: [MoveFocusOrTab: Left,]
-          key: [ Alt: 'h', Alt: Left]  # The Alt: Left etc. variants are temporary hacks and will be removed in the future - please do not rely on them!
-        - action: [MoveFocusOrTab: Right,]
-          key: [ Alt: 'l', Alt: Right]
-        - action: [MoveFocus: Down,]
-          key: [ Alt: 'j', Alt: Down]
-        - action: [MoveFocus: Up,]
-          key: [ Alt: 'k', Alt: Up]
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '=']
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '+']
-        # - action: [Resize: Decrease,]
-        #   key: [ Alt: '-']
-    tab:
-        # - action: [SwitchToMode: Locked,]
-        #   key: [Ctrl: 'g']
-        # - action: [SwitchToMode: Pane,]
-        #   key: [Ctrl: 'p',]
-        # - action: [SwitchToMode: Resize,]
-        #   key: [Ctrl: 'n',]
-        - action: [SwitchToMode: Normal,]
-          key: [Ctrl: 't', Char: "\n", Char: ' ', Esc]
-        # - action: [SwitchToMode: Scroll,]
-        #   key: [Ctrl: 's']
-        # - action: [SwitchToMode: Move,]
-        #   key: [Ctrl: 'h',]
-        # - action: [SwitchToMode: Tmux,]
-        #   key: [Ctrl: 'b',]
-        # - action: [SwitchToMode: Session,]
-        #   key: [Ctrl: 'o',]
-        - action: [SwitchToMode: RenameTab, TabNameInput: [0],]
-          key: [Char: 'r']
-        # - action: [Quit,]
-        #   key: [Ctrl: 'q',]
-        - action: [GoToPreviousTab,]
-          key: [ Char: 'h', Left, Up, Char: 'k',]
-        - action: [GoToNextTab,]
-          key: [ Char: 'l', Right,Down, Char: 'j']
-        - action: [NewTab: , SwitchToMode: Normal,]
-          key: [ Char: 'n',]
-        - action: [CloseTab, SwitchToMode: Normal,]
-          key: [ Char: 'x',]
-        # - action: [ToggleActiveSyncTab, SwitchToMode: Normal,]
-        #   key: [Char: 's']
-        - action: [GoToTab: 1, SwitchToMode: Normal,]
-          key: [ Char: '1',]
-        - action: [GoToTab: 2, SwitchToMode: Normal,]
-          key: [ Char: '2',]
-        - action: [GoToTab: 3, SwitchToMode: Normal,]
-          key: [ Char: '3',]
-        - action: [GoToTab: 4, SwitchToMode: Normal,]
-          key: [ Char: '4',]
-        - action: [GoToTab: 5, SwitchToMode: Normal,]
-          key: [ Char: '5',]
-        - action: [GoToTab: 6, SwitchToMode: Normal,]
-          key: [ Char: '6',]
-        - action: [GoToTab: 7, SwitchToMode: Normal,]
-          key: [ Char: '7',]
-        - action: [GoToTab: 8, SwitchToMode: Normal,]
-          key: [ Char: '8',]
-        - action: [GoToTab: 9, SwitchToMode: Normal,]
-          key: [ Char: '9',]
-        - action: [ToggleTab]
-          key: [ Char: "\t" ]
-        # - action: [NewPane: ,]
-        #   key: [ Alt: 'n',]
-        - action: [MoveFocusOrTab: Left,]
-          key: [ Alt: 'h', Alt: Left]  # The Alt: Left etc. variants are temporary hacks and will be removed in the future - please do not rely on them!
-        - action: [MoveFocusOrTab: Right,]
-          key: [ Alt: 'l', Alt: Right]
-        - action: [MoveFocus: Down,]
-          key: [ Alt: 'j', Alt: Down]
-        - action: [MoveFocus: Up,]
-          key: [ Alt: 'k', Alt: Up]
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '=']
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '+']
-        # - action: [Resize: Decrease,]
-        #   key: [ Alt: '-']
+          key: [ Alt: 'k', Alt: Up, ]
     scroll:
         - action: [SwitchToMode: Normal,]
           key: [Ctrl: 's', Char: ' ', Char: "\n", Esc]
-        # - action: [SwitchToMode: Tab,]
-        #   key: [Ctrl: 't',]
-        # - action: [SwitchToMode: Locked,]
-        #   key: [Ctrl: 'g',]
-        # - action: [SwitchToMode: Pane,]
-        #   key: [Ctrl: 'p',]
-        # - action: [SwitchToMode: Move,]
-        #   key: [Ctrl: 'h',]
-        # - action: [SwitchToMode: Tmux,]
-        #   key: [Ctrl: 'b',]
-        # - action: [SwitchToMode: Session,]
-        #   key: [Ctrl: 'o',]
-        # - action: [SwitchToMode: Resize,]
-        #   key: [Ctrl: 'n',]
         - action: [ScrollToBottom, SwitchToMode: Normal,]
           key: [Ctrl: 'c',]
-        # - action: [Quit,]
-        #   key: [Ctrl: 'q',]
         - action: [ScrollDown,]
           key: [Char: 'j', Down,]
         - action: [ScrollUp,]
@@ -303,8 +37,6 @@ keybinds:
           key: [Char: 'd',]
         - action: [HalfPageScrollUp,]
           key: [Char: 'u',]
-        # - action: [NewPane: ,]
-        #   key: [ Alt: 'n',]
         - action: [MoveFocusOrTab: Left,]
           key: [ Alt: 'h', Alt: Left]  # The Alt: Left etc. variants are temporary hacks and will be removed in the future - please do not rely on them!
         - action: [MoveFocusOrTab: Right,]
@@ -313,105 +45,10 @@ keybinds:
           key: [ Alt: 'j', Alt: Down]
         - action: [MoveFocus: Up,]
           key: [ Alt: 'k', Alt: Up]
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '=']
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '+']
-        # - action: [Resize: Decrease,]
-        #   key: [ Alt: '-']
-        # uncomment this and adjust key if using copy_on_select=false
-        # - action: [Copy: ]
-        #   key: [ Alt: 'c']
     renametab:
         - action: [SwitchToMode: Normal,]
           key: [Char: "\n", Ctrl: 'c', Esc]
-        - action: [TabNameInput: [27] , SwitchToMode: Tab,]
-          key: [Esc,]
-        # - action: [NewPane: ,]
-        #   key: [ Alt: 'n',]
-        # - action: [MoveFocusOrTab: Left,]
-        #   key: [ Alt: 'h', Alt: Left]
-        # - action: [MoveFocusOrTab: Right,]
-        #   key: [ Alt: 'l', Alt: Right]
-        # - action: [MoveFocus: Down,]
-        #   key: [ Alt: 'j', Alt: Down]
-        # - action: [MoveFocus: Up,]
-        #   key: [ Alt: 'k', Alt: Up]
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '=']
-        # - action: [Resize: Increase,]
-        #   key: [ Alt: '+']
-        # - action: [Resize: Decrease,]
-        #   key: [ Alt: '-']
-    # renamepane:
-    #     # - action: [SwitchToMode: Normal,]
-    #     #   key: [Char: "\n", Ctrl: 'c', Esc]
-    #     # - action: [PaneNameInput: [27] , SwitchToMode: Pane,]
-    #     #   key: [Esc,]
-    #     # - action: [NewPane: ,]
-    #     #   key: [ Alt: 'n',]
-    #     # - action: [MoveFocusOrTab: Left,]
-    #     #   key: [ Alt: 'h', Alt: Left]
-    #     # - action: [MoveFocusOrTab: Right,]
-    #     #   key: [ Alt: 'l', Alt: Right]
-    #     # - action: [MoveFocus: Down,]
-    #     #   key: [ Alt: 'j', Alt: Down]
-    #     # - action: [MoveFocus: Up,]
-    #     #   key: [ Alt: 'k', Alt: Up]
-    #     # - action: [Resize: Increase,]
-    #     #   key: [ Alt: '=']
-    #     # - action: [Resize: Increase,]
-    #     #   key: [ Alt: '+']
-    #     # - action: [Resize: Decrease,]
-    #     #   key: [ Alt: '-']
-    # session:
-    #     # - action: [SwitchToMode: Locked,]
-    #     #   key: [Ctrl: 'g']
-    #     # - action: [SwitchToMode: Resize,]
-    #     #   key: [Ctrl: 'n',]
-    #     # - action: [SwitchToMode: Pane,]
-    #     #   key: [Ctrl: 'p',]
-    #     # - action: [SwitchToMode: Move,]
-    #     #   key: [Ctrl: 'h',]
-    #     # - action: [SwitchToMode: Tmux,]
-    #     #   key: [Ctrl: 'b',]
-    #     # - action: [SwitchToMode: Tab,]
-    #     #   key: [Ctrl: 't',]
-    #     # - action: [SwitchToMode: Normal,]
-    #     #   key: [Ctrl: 'o', Char: "\n", Char: ' ', Esc]
-    #     # - action: [SwitchToMode: Scroll,]
-    #     #   key: [Ctrl: 's']
-    #     # - action: [Quit,]
-    #     #   key: [Ctrl: 'q',]
-    #     # - action: [Detach,]
-    #     #   key: [Char: 'd',]
-    #     # - action: [NewPane: ,]
-    #     #   key: [ Alt: 'n',]
-    #     # - action: [MoveFocusOrTab: Left,]
-    #     #   key: [ Alt: 'h', Alt: Left]
-    #     # - action: [MoveFocusOrTab: Right,]
-    #     #   key: [ Alt: 'l', Alt: Right]
-    #     # - action: [MoveFocus: Down,]
-    #     #   key: [ Alt: 'j', Alt: Down]
-    #     # - action: [MoveFocus: Up,]
-    #     #   key: [ Alt: 'k', Alt: Up]
-    #     # - action: [Resize: Increase,]
-    #     #   key: [ Alt: '=']
-    #     # - action: [Resize: Increase,]
-    #     #   key: [ Alt: '+']
-    #     # - action: [Resize: Decrease,]
-    #     #   key: [ Alt: '-']
     tmux:
-        # - action: [SwitchToMode: Locked,]
-        #   key: [Ctrl: 'g']
-        # - action: [SwitchToMode: Resize,]
-        #   key: [Ctrl: 'n',]
-        # - action: [SwitchToMode: Pane,]
-        #   key: [Ctrl: 'p',]
-        # - action: [SwitchToMode: Move,]
-        #   key: [Ctrl: 'h',]
-        # - action: [SwitchToMode: Tab,]
-        #   key: [Ctrl: 't',]
         - action: [SwitchToMode: Normal,]
           key: [Ctrl: 'o', Char: "\n", Char: ' ', Esc]
         - action: [SwitchToMode: Scroll,]
@@ -432,28 +69,28 @@ keybinds:
           key: [ Char: 'c',]
         - action: [SwitchToMode: RenameTab, TabNameInput: [0],]
           key: [Char: ',']
-        - action: [GoToPreviousTab, SwitchToMode: Normal,]
+        - action: [GoToPreviousTab,]
           key: [ Char: 'p']
-        - action: [GoToNextTab, SwitchToMode: Normal,]
+        - action: [GoToNextTab,]
           key: [ Char: 'n']
-        - action: [MoveFocus: Left, SwitchToMode: Normal,]
-          key: [ Left,]
-        - action: [MoveFocus: Right, SwitchToMode: Normal,]
-          key: [ Right,]
-        - action: [MoveFocus: Down, SwitchToMode: Normal,]
-          key: [ Down,]
-        - action: [MoveFocus: Up, SwitchToMode: Normal,]
-          key: [ Up,]
-        - action: [MoveFocus: Left, SwitchToMode: Normal,]
-          key: [ Char: 'h']
-        - action: [MoveFocus: Right, SwitchToMode: Normal,]
-          key: [ Char: 'l']
-        - action: [MoveFocus: Down, SwitchToMode: Normal,]
-          key: [ Char: 'j']
-        - action: [MoveFocus: Up, SwitchToMode: Normal,]
-          key: [ Char: 'k']
-        - action: [NewPane: ,]
-          key: [ Alt: 'n',]
+        # - action: [MoveFocus: Left, SwitchToMode: Normal,]
+        #   key: [ Left,]
+        # - action: [MoveFocus: Right, SwitchToMode: Normal,]
+        #   key: [ Right,]
+        # - action: [MoveFocus: Down, SwitchToMode: Normal,]
+        #   key: [ Down,]
+        # - action: [MoveFocus: Up, SwitchToMode: Normal,]
+        #   key: [ Up,]
+        # - action: [MoveFocus: Left, SwitchToMode: Normal,]
+        #   key: [ Char: 'h']
+        # - action: [MoveFocus: Right, SwitchToMode: Normal,]
+        #   key: [ Char: 'l']
+        # - action: [MoveFocus: Down, SwitchToMode: Normal,]
+        #   key: [ Char: 'j']
+        # - action: [MoveFocus: Up, SwitchToMode: Normal,]
+        #   key: [ Char: 'k']
+        # - action: [NewPane: ,]
+        #   key: [ Alt: 'n',]
         - action: [MoveFocusOrTab: Left,]
           key: [ Alt: 'h', Alt: Left]
         - action: [MoveFocusOrTab: Right,]
@@ -464,14 +101,38 @@ keybinds:
           key: [ Alt: 'k', Alt: Up]
         - action: [FocusNextPane,]
           key: [ Char: 'o']
-        - action: [Resize: Increase,]
-          key: [ Alt: '=']
-        - action: [Resize: Increase,]
-          key: [ Alt: '+']
-        - action: [Resize: Decrease,]
-          key: [ Alt: '-']
+        - action: [Resize: Down,]
+          key: [ Char: 'J']
+        - action: [Resize: Up,]
+          key: [ Char: 'K']
+        - action: [Resize: Left,]
+          key: [ Char: 'H']
+        - action: [Resize: Right,]
+          key: [ Char: 'L']
         - action: [Detach,]
           key: [Char: 'd',]
+        - action: [CloseFocus, SwitchToMode: Normal,]
+          key: [Char: 'x',]
+        - action: [CloseTab, SwitchToMode: Normal,]
+          key: [ Char: 'X',]
+        - action: [GoToTab: 1, SwitchToMode: Normal,]
+          key: [ Char: '1',]
+        - action: [GoToTab: 2, SwitchToMode: Normal,]
+          key: [ Char: '2',]
+        - action: [GoToTab: 3, SwitchToMode: Normal,]
+          key: [ Char: '3',]
+        - action: [GoToTab: 4, SwitchToMode: Normal,]
+          key: [ Char: '4',]
+        - action: [GoToTab: 5, SwitchToMode: Normal,]
+          key: [ Char: '5',]
+        - action: [GoToTab: 6, SwitchToMode: Normal,]
+          key: [ Char: '6',]
+        - action: [GoToTab: 7, SwitchToMode: Normal,]
+          key: [ Char: '7',]
+        - action: [GoToTab: 8, SwitchToMode: Normal,]
+          key: [ Char: '8',]
+        - action: [GoToTab: 9, SwitchToMode: Normal,]
+          key: [ Char: '9',]
 
 # plugins:
 #     - path: tab-bar
@@ -496,7 +157,7 @@ keybinds:
 
 # Choose the path to the default shell that zellij will use for opening new panes
 # Default: $SHELL
-# default_shell: fish
+default_shell: fish
 
 # Toggle between having pane frames around the panes
 # Options:
